--- a/changgou_service/changgou_service_business/src/main/resources/application.yml
+++ b/changgou_service/changgou_service_business/src/main/resources/application.yml
@@ -4,12 +4,14 @@ spring:
   application:
     name: business
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.200.128:3306/changgou_business?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: root
   main:
     allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
+  rabbitmq:
+    host: 192.168.200.128
 eureka:
   client:
     service-url:
