--- a/changgou_service_api/changgou_service_search_api/pom.xml
+++ b/changgou_service_api/changgou_service_search_api/pom.xml
@@ -3,32 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>changgou_service</artifactId>
+        <artifactId>changgou_service_api</artifactId>
         <groupId>com.changgou</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>changgou_service_goods</artifactId>
+    <artifactId>changgou_service_search_api</artifactId>
+
 
     <dependencies>
         <dependency>
             <groupId>com.changgou</groupId>
-            <artifactId>changgou_common_db</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.changgou</groupId>
-            <artifactId>changgou_service_goods_api</artifactId>
+            <artifactId>changgou_common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
     </dependencies>
 
