--- a/changgou_service/changgou_service_goods/src/main/resources/application.yml
+++ b/changgou_service/changgou_service_goods/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: goods
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://192.168.200.128:3306/changgou_goods?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: root
