1、原来登录的密码是写死在代码中，现修改为动态获取用户信息

--- a/changgou_gateway/changgou_gateway_system/pom.xml
+++ b/changgou_gateway/changgou_gateway_system/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>changgou_gateway_system</artifactId>
 
-    <dependencies>
+<!--    <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -35,6 +35,6 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.0</version>
         </dependency>
-    </dependencies>
+    </dependencies>-->
 
 </project>
