--- a/changgou_service/changgou_service_goods/pom.xml
+++ b/changgou_service/changgou_service_goods/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>changgou_service_order_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--fescar依赖-->
+        <dependency>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou_common_fescar</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
